<resources>
    <string name="app_name">BattleShips</string>
    <string name="Easy">Baby</string>
    <string name="Medium">Bring \'em on</string>
    <string name="Hard">Nightmare</string>
    <string name="Choose">Choose Difficulty:</string>
    <string name="Play">FIGHT!</string>
    <string name="Won">YOU WON</string>
    <string name="Loose">YOU LOOSE</string>
    <string name="Again">Play Again</string>
    <string name="Restart">Change Difficulty</string>
    <string name="Difficulty">difficulty</string>
    <string name="playerTurn">Your Turn</string>
    <string name="computerTurn">Computer Turn</string>
    <string name="keyDifficulty">difficulty</string>
    <string name="EnterName">Enter Your Name:</string>
    <string name="keyState">state</string>
    <string name="title_activity_maps">Map</string>
    <string name="playerName">Name</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="location">Location</string>
    <string name="showrecs">Records</string>
</resources>
